new component, purpose and types of component selector, scss

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,17 @@
 {{inputValueSecond}}
 <input type="text" [(ngModel)]="inputValue" />
 {{inputValue}}
+
+<p>Outside</p>
+<div>
+    <p>Inside</p>
+</div>
+
+<ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+</ul>
+
+<p app-dashboard></p>
