lifecycle hooks - ngOnInit, ngOnChanges, ngDoCheck; component and global styles, viewEncapsulation none, special angular selectors

--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,2 +1,3 @@
-<p>admin-dashboard works!</p>
+<p id="unique">admin-dashboard works!</p>
+<p >new admin-dashboard works!</p>
 Data from parent - {{dataToChild}}
