--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="showTemplate">
-<p appBackgroundDirective>Root component</p>
+<!-- <p appBackgroundDirective>Root component</p>
 <button routerLink="dashboard">Dashboard</button>
 <button routerLink="admin-dashboard">Dashboard</button>
 
@@ -38,7 +38,7 @@
 <div *appCustomStructuralDirective="false">
   <p>Custom structural directive</p>
 </div>
-{{dataFromChild}}
+{{dataFromChild}} -->
 <!-- <a href="/dashboard">Dashboard link</a> -->
 <router-outlet></router-outlet>
 </ng-container>
