--- a/src/app/template-driven-forms/template-driven-forms.component.html
+++ b/src/app/template-driven-forms/template-driven-forms.component.html
@@ -1,7 +1,7 @@
 <form #heroForm="ngForm">
     <input type="text" class="form-control" id="name" required
        [(ngModel)]="name" name="nameRef" #nameRef>
-    <input type="text" class="form-control" id="email" required
+    <input type="text" class="form-control" id="email" required emailValidators
        [(ngModel)]="email" name="emailRef" #emailRef>
 
     <!-- {{heroForm.controls.nameRef | json}} -->
