Reactive forms - updateValueAndValidity and its usecase, get all the field values in form, walkthrough all properties and methods in FormControl, rxjs - Observable, Subject, BehaviorSubject and ReplaySubject

--- a/src/app/reactive-forms/reactive-forms.component.html
+++ b/src/app/reactive-forms/reactive-forms.component.html
@@ -4,6 +4,8 @@
 <p>{{profileForm.controls.name?.errors | json}}</p>
 <input type="text" formControlName="email">
 <p>{{profileForm.controls.email?.errors?.email}}</p>
+<input type="number" formControlName="number">
+<p>{{profileForm.controls.number?.errors?.number}}</p>
 
 <button [disabled]="!profileForm.valid">Submit</button>
 </form>
