HttpClientModule - HttpClient, dependency injection overview, constructor injection, subscribe HttpClient get method, Subscription and unsubscribe, async pipe, advantages of async pipe

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 <table class="display" style="width:100%" appDatatable [inputValue]="inputValue">
     <thead>
         <tr>
-            <th>{{dynamicText}}</th>
+            <th>Name</th>
             <th>Position</th>
             <th>Office</th>
             <th>Age</th>
