--- a/src/app/http-client/http-client.component.html
+++ b/src/app/http-client/http-client.component.html
@@ -6,3 +6,7 @@
     <li *ngFor="let data of getData$ | async">{{data.title}}</li>
 </ul> -->
 
+<ul>
+    <li *ngFor="let data of squareOdd | async">{{data}}</li>
+</ul>
+
